<resources>
    <string name="app_name">SmartCall</string>
    <string name="queue">Queue</string>
    <string name="completed_calls">Completed\n\u0020\u0020\u0020\u0020\u0020Calls</string>
    <string name="pending_calls">Pending\n\u0020\u0020\u0020Calls</string>
    <string name="marketing">Marketing</string>
    <string name="collection">Collection</string>
    <string name="welcome_call">Welcome Call</string>
    <string name="renewal">Renewal</string>
    <string name="todo_list">TODO list</string>
    <string name="dashboard">Dashboard</string>
    <string name="list_of_leads">List of Leads</string>
    <string name="lead_name">Lead Name</string>
    <string name="mobile_number">Mobile\n\u0020\u0020\u0020\u0020No.</string>
    <string name="attempt_no">Attempt\n\u0020\u0020\u0020\u0020\u0020No.</string>
    <string name="fab">fab</string>
    <string name="add_new_lead">Add New Lead</string>
    <string name="s_call">S-Call</string>
    <string name="enter_user_id">Enter User ID</string>
    <string name="enter_your_user_id">Enter your User ID</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="first_time_user">First Time User?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logo">Logo</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_otp_sent_to_you_at">Enter the OTP sent to you at\n your registered Mobile No.</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_default_password">Enter Default Password</string>
    <string name="set_password">Set Password</string>
    <string name="password_note"><i>(Password must be 8-12 Characters long,\nAlphanumeric with at least 1 special character)</i></string>
    <string name="submit">Submit</string>
    <string name="registration_successful">Registration Successful !</string>
    <string name="pin_generated_success">Pin Generated Successfully !</string>
    <string name="pin_reset_success">Pin Reset Successfully !</string>
    <string name="generate_mpin">Generate mPIN</string>
    <string name="login_now">Login Now</string>
    <string name="set_new_pin">Set New Pin</string>
    <string name="re_enter_pin">Re-enter Pin</string>
    <string name="check_internet_connection">Check your internet connection</string>
    <string name="test_custom_dialog_title">Test Custom Dialog</string>
    <string name="login_details_verified">Login Details Verified</string>
    <string name="test_dialog_title">Test Dialog</string>
    <string name="enter_mpin">Enter mPin</string>
    <string name="forgot_mpin">Forgot mPin ?</string>
    <string name="ok">OK</string>
    <string name="this_is_a_custom_dialog_box_where_text_will_be_displayed">This is a custom dialog box\nwhere text will be displayed</string>
    <string name="add_new_lead_details">Add New Lead Details</string>
    <string name="enter_lead_first_name">Enter Lead First Name</string>
    <string name="enter_lead_last_name">Enter Lead Last Name</string>
    <string name="enter_lead_mobile_number">Enter Lead Mobile Number</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="saved_in_room_db">Successfully Saved in Room DB</string>
    <string name="back_to_lead_list">Back To Lead List</string>
    <string name="back_to_lead_list_space">\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0Back To Lead List\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0</string>
    <string name="permission_to_call_denied">Permission to make a call is denied</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="lead_number_already_exists">Lead Number Already Exists</string>
    <string name="test_string_for_github">This String is to test Github</string>
    <string name="user_id_cannot_be_empty">User ID cannot be empty</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="user_name_cannot_be_empty">UserName cannot be empty</string>
    <string name="password_not_valid">Password not valid</string>
    <string name="password_not_matching">Password not matching</string>
    <string name="enter_valid_otp">Enter valid OTP</string>
    <string name="pin_cannot_be_empty">Pin cannot be empty</string>
    <string name="pin_does_not_matching">Pin Does Not Match</string>
    <string name="pin_must_be_4digits">Pin must be 4 digits</string>
    <string name="lead_first_name_cannot_be_empty">Lead first name cannot be empty </string>
    <string name="lead_last_name_cannot_be_empty">Lead last name cannot be empty </string>
    <string name="lead_mobile_number_cannot_be_empty">Lead mobile number cannot be empty </string>
    <string name="please_enter_proper_lead_number">Please enter proper lead mobile number </string>
    <string name="mobile_number_cannot_begin_with_zero">Mobile No. cannot begin with 0</string>
    <string name="please_select_lead_source">Please select lead source </string>
    <string name="call_status">Call Status</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="spoke_to_customer">\u00A0\u00A0\u00A0Spoke To The Customer\u00A0\u00A0\u00A0</string>
    <string name="spoke_to_customer_break">Spoke To The \nCustomer</string>
    <string name="did_not_speak_to_ncustomer">Did Not Speak To Customer</string>
    <string name="did_not_speak_to_ncustomer_break">Did Not Speak \nTo Customer</string>
    <string name="calls_scheduled_for_the_day">Calls Scheduled For The Day</string>
    <string name="schedule_for_the_day">Schedule For The Day</string>
    <string name="total">Total</string>
    <string name="calls_scheduled_for_today">Calls Scheduled For Today</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="calls_scheduled_for_the_month">Calls Scheduled For The Month</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading...</string>
    <string name="welcome_User">Welcome User!</string>
    <string name="select_lead_source">Select Lead Source</string>
    <string name="get_user_location_and_save">Get User Location And Save</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="save_in_local_db">Save In Local DB</string>
    <string name="retrieve_from_local_db">Retrieve from Local DB</string>
    <string name="address">Address</string>
    <string name="get_location_and_save">Get Location And Save</string>
    <string name="customer_details">Customer Details</string>
    <string name="customer_details_visited">Visited - Customer Details</string>
    <string name="enter_customer_name">Enter Customer Name</string>
    <string name="enter_customer_mobile_no">Enter Customer Mobile No.</string>
    <string name="get_customer_address">Get Customer Address &amp; Save</string>
    <string name="store_in_local_db">Store in Local DB</string>
    <string name="customer_name_cannot_be_empty">Customer name cannot be empty</string>
    <string name="customer_phone_cannot_be_empty">Customer phone cannot be empty</string>
    <string name="goto_customer_activity">Goto Customer Activity</string>
    <string name="timezone_12hr_format">Time is 12 hour format</string>
    <string name="timezone_24hr_format">Time is 24 hour format</string>
    <string name="completed">Completed</string>
    <string name="pending">Pending</string>
    <string name="visits">Visits</string>
    <string name="calls">Calls</string>
    <string name="schedule">Schedule</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location">Location</string>
    <string name="distance">Distance</string>
    <string name="severity">Severity</string>
    <string name="visited_the_customer">Visited The Customer</string>
    <string name="visited_the_customer_space">\u00A0\u00A0\u00A0\u00A0\u00A0Visited The Customer\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0</string>
    <string name="did_not_visited_the_customer">Did Not Visit The Customer</string>
    <string name="personal_details">Personal Details</string>
    <string name="details">Details</string>
    <string name="scheduled_time">Scheduled Time</string>
    <string name="aadhar_no">Aadhar No.</string>
    <string name="dob">DOB</string>
    <string name="father_s_name">Father\'s Name</string>
    <string name="loan_acc_no">Loan Acc. No.</string>
    <string name="dpd">DPD</string>
    <string name="amt_due_as_on">Amt. due as on</string>
    <string name="balance_interest">Balance Interest</string>
    <string name="total_payable_as_on">Total Payable as on</string>
    <string name="product">Product</string>
    <string name="products">Products</string>
    <string name="calculate">Calculate</string>
    <string name="near_by">Near By</string>
    <string name="total_amt_paid">Total Amt. Paid</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="full_amt_paid">Full Amt Paid</string>
    <string name="will_pay_later">Will Pay Later</string>
    <string name="will_pay_later_space">\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0Will Pay Later\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0</string>
    <string name="needs_waiver">Needs Waiver</string>
    <string name="others">Others</string>
    <string name="please_specify">Please Specify</string>
    <string name="please_specify_reason">Please Specify Reason</string>
    <string name="reason_for_waiver">Reason for Waiver</string>
    <string name="visit_complete_no_change">Visit Complete - No Change</string>
    <string name="visit_complete_update_details">Visit Complete - Update Details</string>
    <string name="visit_complete_escalate_to_bm">Visit Complete - Escalate To BM</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="balance_days">Balance Days</string>
    <string name="d">D</string>
    <string name="assigned">Assigned</string>
    <string name="dpd_queue">DPD Queue</string>
    <string name="no_of_members">No. Of \nMembers</string>
    <string name="loan_collection">Loan Collection</string>
    <string name="AttemptNo">Attempt No. :</string>
    <string name="Scheduled_Time">Scheduled Time :</string>
    <string name="ready_to_pay">Ready To Pay</string>
    <string name="not_ready_to_pay">Not Ready To Pay</string>
    <string name="ask_to_call_back_later">Asked To \nCall Back Later</string>
    <string name="send_link_for_online_payment">Send Link For Online Payment</string>
    <string name="schedule_visit_for_collection">Schedule Visit For Collection</string>
    <string name="complete_no_change">\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0Complete-No change\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0</string>
    <string name="complete_need_to_update_details">Complete-Need To Update Details</string>
    <string name="complete_escalate_to_bm">\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0Complete-Escalate To BM\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0</string>
    <string name="schedule_visit">Schedule Visit</string>
    <string name="update_schedule">Update Schedule</string>
    <string name="update_schedule_space">\u00A0\u00A0Update Schedule\u00A0\u00A0</string>
    <string name="schedule_update_successfully">Schedule Updated Successfully</string>
    <string name="view_nearby_customers">View Nearby Customers</string>
    <string name="goto_dashboard">Go to Dashboard</string>
    <string name="back_to_member_list">Back To Member List</string>
</resources>