<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/MainConstraintStyle"
    tools:context=".location_gps.user_location.UserLocationActivity">

    <TextView
        android:id="@+id/userLat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/latitude"
       style="@style/common_text_style"/>

    <TextView
        android:id="@+id/userLong"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userLat"
        app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/longitude"
        style="@style/common_text_style"/>

    <Button
        android:id="@+id/btnLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userLong"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/get_location_and_save"
        style="@style/BigButtonStyle"/>


    <Button
        android:id="@+id/btnRetrieveFromRoomDB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLocation"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/retrieve_from_local_db"
        style="@style/BigButtonStyle"/>

    <Button
        android:id="@+id/btnGotoCustomerActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRetrieveFromRoomDB"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/goto_customer_activity"
        style="@style/BigButtonStyle"/>


     <!--for retrieving purpose-->
    <TextView
        android:id="@+id/userName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_40sdp"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/name"
        style="@style/common_text_style"/>

    <TextView
        android:id="@+id/userPhone"
        app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/userName"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/mobile_number"
        style="@style/common_text_style"/>

    <TextView
        android:id="@+id/userAddress"
        app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/userPhone"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/address"
        android:gravity="center"
        android:inputType="textMultiLine"
        android:layout_width="@dimen/_150sdp"
        style="@style/common_text_style"/>

    <ProgressBar
            android:id="@+id/locationProgressBar"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="@id/userLat"
            app:layout_constraintBottom_toBottomOf="@id/userLong"
            app:layout_constraintStart_toStartOf="@id/userLong"
            app:layout_constraintEnd_toEndOf="@id/userLong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>




</androidx.constraintlayout.widget.ConstraintLayout>
</layout>