<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        style="@style/MainConstraintStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginActivity">

        <ScrollView
            android:id="@+id/loginScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rootConstraintLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivCallLogo"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_60sdp"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/call_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/textBlue" />

                <TextView
                    android:id="@+id/labelSmartCall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/s_call"
                    android:textAllCaps="true"
                    android:textColor="@color/textBlue"
                    android:textSize="@dimen/_20ssp"
                    app:layout_constraintBottom_toBottomOf="@id/ivCallLogo"
                    app:layout_constraintStart_toEndOf="@id/ivCallLogo"
                    app:layout_constraintTop_toTopOf="@id/ivCallLogo" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutId"
                    style="@style/text_input_layout"
                    android:layout_marginTop="@dimen/_100sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivCallLogo">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtUserID"
                        style="@style/editTextStyle"
                        android:hint="@string/enter_user_id"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ivCallLogo" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutPassword"
                    style="@style/text_input_layout"
                    android:layout_marginTop="@dimen/_15sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/inputLayoutId">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtUserPassword"
                        style="@style/editTextStyle"
                        android:hint="@string/enter_password"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/edtUserID" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    style="@style/ButtonStyle"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:text="@string/login"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/inputLayoutPassword" />

                <TextView
                    android:id="@+id/labelForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintEnd_toEndOf="@id/btnLogin"
                    app:layout_constraintTop_toBottomOf="@id/btnLogin" />

                <TextView
                    android:id="@+id/labelDontHaveAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_50sdp"
                    android:text="@string/first_time_user"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/labelForgotPassword" />

                <TextView
                    android:id="@+id/txtSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:text="@string/sign_up"
                    android:textColor="@color/textBlue"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/labelForgotPassword"
                    app:layout_constraintStart_toEndOf="@id/labelDontHaveAccount"
                    app:layout_constraintTop_toBottomOf="@id/labelForgotPassword" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>