<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".npa_flow.NearByCustomersActivity">


    <Button
        android:id="@+id/btnVisitNearbyCustomers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       android:layout_marginTop="@dimen/_50sdp"
        android:textStyle="normal"
        android:visibility="invisible"
        style="@style/CustomButtonStyle"
        android:text="@string/view_nearby_customers"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_45sdp"/>


    <Button
        android:id="@+id/btnGotoDashBoard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/btnVisitNearbyCustomers"
        android:layout_marginTop="@dimen/_20sdp"
        style="@style/CustomButtonStyle"
        android:textStyle="normal"
        android:backgroundTint="@color/green"
        android:text="@string/goto_dashboard"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_45sdp"/>

    <Button
        android:id="@+id/btnBackToMemberList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnGotoDashBoard"
        android:layout_marginTop="@dimen/_20sdp"
        style="@style/CustomButtonStyle"
        android:textStyle="normal"
        android:backgroundTint="@color/brightOrange"
        android:text="@string/back_to_member_list"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_45sdp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>