<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/MainConstraintStyle"
    tools:context=".call_scheduled.CallScheduledActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolBarStyle"
        android:background="@color/textBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/calls_scheduled_for_today"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:id="@+id/callScheduledScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clRoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">




            <TextView
                android:id="@+id/labelQueue"
                style="@style/semi_mid_text_style"
                android:textColor="@color/dark_grey"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:text="@string/queue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labelName"
                android:textColor="@color/dark_grey"
                style="@style/semi_mid_text_style"
                android:layout_marginTop="@dimen/_40sdp"
                android:text="@string/name"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintStart_toEndOf="@id/labelQueue"
                app:layout_constraintEnd_toStartOf="@id/labelDate"
               app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labelDate"
                style="@style/semi_mid_text_style"
                android:textColor="@color/dark_grey"
                android:layout_marginTop="@dimen/_40sdp"
                android:text="@string/date"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintStart_toEndOf="@id/labelName"
                app:layout_constraintEnd_toStartOf="@id/labelTime"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labelTime"
                style="@style/semi_mid_text_style"
                android:textColor="@color/dark_grey"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:text="@string/time"
                app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toTopOf="parent" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCallScheduled"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelQueue"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                tools:itemCount="4"
                android:orientation="vertical"
                tools:listitem="@layout/item_call_scheduled"
                android:layout_height="wrap_content"/>







        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>